syntax = "proto3";

option csharp_namespace = "Bard.gRPCService";

package Banking;

service BankAccountService {
  rpc CreateBankAccount(CreateBankAccountRequest) returns (BankAccountResponse);
  rpc GetBankAccount (BankAccountRequest) returns (BankAccountResponse);
  rpc UpdateBankAccount (UpdateBankAccountRequest) returns (BankAccountResponse);

}

message BankAccountRequest{
  int32 id = 1; 
}

message BankAccountResponse{
  int32 id = 1;
  string customerName = 2;
  float balance = 3;
  bool isActive = 4;
}
message CreateBankAccountRequest {
  string customerName = 1;
  float balance = 2;  
}

message UpdateBankAccountRequest {
  int32 id = 1;
  string customerName = 2;
  float balance = 3;
}
message CloseBankAccountRequest {
  int32 id = 1;
}
